# market_data_pipeline

./: docker-compose.yaml  pyproject.toml
dags/: market_pipeline.py
dbt/market_data/models/staging/: schema.yml  stage_crypto_prices.sql  stage_stock_prices.sql
ingestion/notebooks/: fetch_crypto.ipynb  fetch_stocks.ipynb
ingestion/scripts/: fetch_crypto.py  fetch_stocks.py  fetchers.py  load_raw.py  models.py  test_conn.py
