[project]
name = "market-data-pipeline"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.2.1",
    "ipykernel>=7.2.0",
    "postgres>=4.0",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "yfinance>=1.3.0",
]
